--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,6 +8,13 @@ on:
 
 jobs:
 
+  Test:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Build the Docker image
+      run: pylint app.py
+
   Docker:
     runs-on: ubuntu-latest
     steps:
