--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,7 +13,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: pylint app.py
+      run: |
+       pip install pylint
+       pylint app.py
 
   Docker:
     runs-on: ubuntu-latest
