--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,14 +8,14 @@ on:
 
 jobs:
 
-  Test:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: |
-       pip install pylint
-       pylint app.py
+#   Test:
+#     runs-on: ubuntu-latest
+#     steps:
+#     - uses: actions/checkout@v3
+#     - name: Build the Docker image
+#       run: |
+#        pip install pylint
+#        pylint app.py
 
   Docker:
     runs-on: ubuntu-latest
@@ -35,4 +35,4 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         push: true
-        tags: kenkool23/python-app:${{github.run_number}}
+        tags: kenkool23/python-app:latest
