--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,10 +31,10 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
     -
-      name: Build and push
+      name: push
       uses: docker/build-push-action@v4
       with:
         push: true
-        tags: 
-        - kenkool23/python-app:latest
-        - kenkool23/python-app:${{github.run_number}}
+        tags: |
+         kenkool23/python-app:${{github.run_number}}
+         kenkool23/python-app:latest
