--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -51,10 +51,5 @@ jobs:
           aws-secret-access-key: ${{ secrets.SECRET_ACCESS_KEY }}
           aws-region: us-east-2
 
-      - name: Deploy AWS ECS Service
-        uses: icalia-actions/deploy-aws-ecs-service@v0.0.7
-        with:
-          name: app-serv-lbbb
-          cluster: appCluster
-          force-new-deployment: true
-          container-images: kenkool23/python-app:latest
+      - name: Update Service
+        run: aws update-service --service app-serv-lbbb --cluster appCluster --force-new-deployment
