--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,23 +5,28 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-image:
-
+  Docker-image:
     runs-on: ubuntu-latest
-
+    #needs: Test
     steps:
     - uses: actions/checkout@v3
 
-    - name: created folder
-      run: mkdir folder
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag kenkool23/python-app:v.${{github.run_number}}
+      
+    
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: List the direc
-      run: ls -l
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build-image
-    steps:
-    - name: List the direc
-      run: ls -l
+    -
+      name: push
+      uses: docker/build-push-action@v4
+      with:
+        push: true
+        tags: |
+         kenkool23/python-app:v.${{github.run_number}}
+         kenkool23/python-app:latest
     
