added code scan job

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,9 +5,18 @@ on:
     branches: [ "main" ]
 
 jobs:
+
+  Code-scan:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Test App code
+      run: echo "Testing python app"
+
+
   Docker-image:
     runs-on: ubuntu-latest
-    #needs: Test
+    needs: Code-scan
     steps:
     - uses: actions/checkout@v3
 
