--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,4 +38,18 @@ jobs:
         tags: |
          kenkool23/python-app:v.${{github.run_number}}
          kenkool23/python-app:latest
+
+  Update-ECS-service:
+    runs-on: ubuntu-latest
+    needs: Docker-image
+    steps:
+      - name: Configure AWS Credentials For GitHub Actions
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.SECRET_ACCESS_KEY }}
+          aws-region: us-east-2
+
+      - name: Update Service
+        run: aws ecs update-service --service app-serv-lb --cluster app-cluster --force-new-deployment
     
